# fastapi_llm_test_generator

./: README.md  pyproject.toml  setup.py
example/: example.py  fastapi_app.py
fastapi_llm_test_generator/: __init__.py  __main__.py  about.py  cli.py  logging.py
fastapi_llm_test_generator/llm/: __init__.py  generate.py  prompt.py  system.py
fastapi_llm_test_generator/plugins/: __init__.py
fastapi_llm_test_generator/plugins/ai_clients/: __init__.py  anthropic_client.py
fastapi_llm_test_generator/plugins/db_clients/: __init__.py  asyncpg.py  base.py  psycopg2.py  use_db_plugin.py
fastapi_llm_test_generator/schemas/: __init__.py
fastapi_llm_test_generator/walk_ast/: __init__.py  fastapi_functions.py  main.py  utils.py  walker.py
