[project]
name = "llm-test-generator-tool"
version = "0.1.0"
description = "A tool to generate tests from fastapi using LLMs"
authors = [{ name = "Nico Lutz", email = "nico@bakkenbaeck.no" }]
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "catalogue>=2.0.10",
    "rich-toolkit>=0.14.1",
    "typer>=0.15.2",
]


[tool.setuptools]
packages = ["fastapi_llm_test_generator"]

[dependency-groups]
anthropic = [
    "anthropic>=0.49.0",
]
asyncpg = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
]
psycopg2 = [
    "psycopg2>=2.9.10",
]
