[project]
name = "llm-test-generator-tool"
version = "0.0.1"
description = "A tool to generate tests from fastapi using LLMs"
authors = [{ name = "Nico Lutz", email = "nico@bakkenbaeck.no" }]
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "catalogue>=2.0.10",
    "pydantic>=2.11.0",
    "rich-toolkit>=0.14.1",
    "typer>=0.15.2",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[dependency-groups]
anthropic = [
    "anthropic>=0.49.0",
]
asyncpg = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
]
psycopg2 = [
    "psycopg2>=2.9.10",
]
